# dioxus-bootstrap

./: .gitignore  Cargo.toml  README.md
src/: application.rs  layout.rs  lib.rs  script.rs  style.rs
src/assets/: dioxus.event.js
src/components/: alert.rs  badge.rs  button.rs  card.rs  dropdown.rs  list.rs  mod.rs  modal.rs  navbar.rs  progress.rs
