[package]
name = "dioxus-bootstrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dioxus-bootstrap-demo"
path = "src/bin/main.rs"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus", features = ["web"] }
wasm-logger = "0.2.0"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus", features = ["desktop", "web"] }

[dependencies]
fermi = { git = "https://github.com/dioxuslabs/fermi" }
golde = { git = "https://github.com/mrxiaozhuox/golde.git" }
log = "0.4.6"

[patch.crates-io]
dioxus = { git = 'https://github.com/dioxuslabs/dioxus' }